# talonctl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.integrated.md  CLAUDE.md  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude/commands/: hunt.md  review-templates.md  soc.md
.claude/skills/behavioral-detections/: SKILL.md  attack-patterns.md  aws-behavioral-rules.md  detection-chaining.md  entraid-behavioral-rules.md
.claude/skills/cql-patterns/: SKILL.md
.claude/skills/detection-tuning/: AVAILABLE_FUNCTIONS.md  ENVIRONMENT_CONTEXT.md  EXAMPLES.md  SKILL.md  TUNING_PATTERNS.md
.claude/skills/fusion-workflows/: SKILL.md
.claude/skills/logscale-security-queries/: README.md  SKILL.md  case-statements.md  (+5 more)
.github/workflows/: ci.yml  plan-and-deploy.yml  pypi-publish.yml  release.yml  weekly-template-discovery.yml
docs/handoffs/: .gitignore
docs/investigations/: README.md  TEMPLATE.md
examples/: adapter_poc.py
examples/lookup_files/: README.md
examples/resources/: README.md  case_notification_group.yaml  case_sla.yaml  case_template.yaml  detection.yaml  lookup_file.yaml  rtr_put_file.yaml  rtr_script.yaml  saved_search_function.yaml  saved_search_hunting.yaml  workflow.yaml
knowledge/patterns/: aws.md
scripts/: README.md  common.py  create_backup.py  detection_health.py  resource_deploy.py  setup.py  soc_metrics.py  template_discovery.py
scripts/core/: README.md  __init__.py  base_provider.py  dependency_validator.py  deployment_orchestrator.py  provider_adapter.py  provider_registry.py  state_manager.py  state_synchronizer.py  template_discovery.py
scripts/providers/: __init__.py  detection_provider.py  lookup_file_provider.py  rtr_put_file_provider.py  saved_search_provider.py  workflow_provider.py
scripts/utils/: template_matcher.py
src/talonctl/: __init__.py  cli.py  project.py
tests/: __init__.py  conftest.py  test_dashboard_provider.py
tests/unit/: __init__.py  _helpers.py  test_auth_command.py  test_backup_command.py  test_case_examples_valid.py  test_case_import_wiring.py  test_case_management_integration.py  test_case_notification_group_provider.py  test_case_provider_adapter.py  test_case_registration.py  test_case_sla_provider.py  test_case_template_provider.py  test_dependency_validator.py  test_deploy_lock.py  test_deployment_orchestrator.py  test_detection_health.py  test_detection_provider.py  test_drift_detector.py  test_envelope.py  test_envelope_loader.py  test_envelope_serializer.py  test_envelope_validation.py  test_examples.py  test_find_command.py  test_hash_stability.py  test_health_command.py  test_health_query_fn.py  test_init_command.py  test_lookup_file_provider.py  test_metadata_validators.py  test_metrics_command.py  test_migrate_cli.py  test_migrate_rewrap.py  test_migrate_state.py  test_ngsiem_client_errors.py  test_old_shape_rejection.py  test_orchestrator_validate_queries.py  test_project.py  test_provider_adapter.py  test_query_collection.py  (+22 more)
(+146 files in other folders)
