[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talonctl"
version = "1.0.0"
description = "Infrastructure as code for CrowdStrike NGSIEM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Will Webster" }]
keywords = ["crowdstrike", "ngsiem", "detection-as-code", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "crowdstrike-falconpy>=1.6.1",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.8.0"]

[project.scripts]
talonctl = "talonctl.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/talonctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests",
    "live_api: marks tests that hit real API",
    "slow: marks slow tests",
    "unit: marks unit tests",
]

[tool.ruff]
target-version = "py311"
line-length = 120
